[package]
name = "tor_websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
balens_log = { git = "https://github.com/basic-automation/balens-log" }
arti-client = { version = "0", features = ["full", "static"] }
hyper = { version = "1", features = ["full"] }
tor-rtcompat = { version = "0", features = ["full"] }
tor-hsservice = { version = "0", features = ["full"] }
native-tls = "0"
tokio-native-tls = "0"
futures = "0"
tor-proto = { version = "0", features = ["full"] }
tor-cell = { version = "0", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
axum = { version = "0", features = ["http2", "ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tower-service = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing = "0"
tower-http = { version = "0", features = ["full"] }
http-body-util = "0"
tokio-tungstenite = { version = "0", features = ["native-tls"] }
